[package]
name = "backend"
version = "0.1.0"
authors = ["kangalioo <jannik.a.schaper@web.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.12.3", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"

# [profile.dev.package."*"]
# opt-level = 3