[package]
name = "backend"
version = "0.1.0"
authors = ["kangalioo <jannik.a.schaper@web.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# pyo3 = { version = "0.12.3", features = ["extension-module"] }
pyo3 = { path = "/home/kangalioo/dev/rust/_downloaded/pyo3", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
chrono = "0.4.19"
roxmltree = "0.14.0"
etterna = { package = "etterna_base", path = "/home/kangalioo/dev/rust/etterna-base", features = ["parallel"] }
etterna_savegame = { path = "/home/kangalioo/dev/rust/etterna-savegame" }

[profile.dev.package."*"]
opt-level = 3