[package]
name = "etterna_savegame"
version = "0.1.0"
authors = ["kangalioo <jannik.a.schaper@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# etterna = { package = "etterna_base", path = "/home/kangalioo/dev/rust/etterna-base", features = ["parallel"] }
etterna = { package = "etterna_base", git = "https://github.com/kangalioo/etterna-base", features = ["parallel"] }
quick-xml = { version = "0.20.0", features = ["serialize", "encoding"] }
chrono = "0.4.19"
serde = { version = "1.0", features = ["derive"] }